# @markup rdoc
# @title Change Log
# @author Robert Sharp

==History

[jerbil-1.3.3 03-Sep-2013]

  Ensure jerbil methods are called on the server and not the server record.

[jerbil-1.3.2 03-Sep-2013]

  Introduce Optplus version of the bin/jerbil command and add a couple of information
  methods to the server in support.

[jerbil-1.3.1 29-Aug-2013]

  Fix minor error in runscript (status)

[jerbil-1.3.0 29-Aug-2013]

  First release with properly multiplexed runscript files

[jerbil-1.2.10 28-Aug-2013]

  Add the export of LANG to support encodings

[jerbil-1.2.9 28-Aug-2013]

  further changes to runscripts to not fiddle with PATH etc

[jerbil-1.2.8 28-Aug-2013]

  Various changes to runscripts to cope with /usr/local and to use checkpath

[jerbil-1.2.7 27-Aug-2013]

  Added log entry to record RUBY_VERSION for a service

[jerbil-1.2.6 23-Aug-2013]

  Ensure that Jerbil is 1.9 compliant and ready to go

[jerbil-1.2.5 16-Aug-2013]

  Use /bin/su for all init.d actions (stop and status)

[jerbil-1.2.4 03-Apr-2013]

  Suppress client messages about method strings and symbols

[jerbil-1.2.3 03-Apr-2013]

  Add chmod to creation of /var/run/jerbil in jerbil initscript.

[jerbil-1.2.2 21-Nov-2012]

  Add proper home for jerbil user in jerbil-install. Add guidance on logging to READMEs.

[jerbil-1.2.1 13-Nov-2012]

  Minor bugs fixed in sbin/jerbild and runscript updated to su to jerbil user

[jerbil-1.2.0 12-Nov-2012]

  Housekeeping release with unwanted modules/code removed and documentation tidied for
  release into wild (evenutally).

[jerbil-1.1.3 22-Sep-2012]

  Add some instrumentation to jserviced to help troubleshoot the numbat runscript.

[jerbil-1.1.2 06-Sep-2012]

  Update runscript to create /var/run/jermine if not already there. 3.0+ kernels
  appear to use /run on tmpfs

[jerbil-1.1.1 24-Aug-2012]

  Take out the -m option from the su command - no need to preserve any environment

[jerbil-1.1.0 24-Aug-2012]
