@@ -1,13 +1,15 @@
 # Created by Jevoom
 #
-# 03-Sep-2013
-#   Ensure jerbil methods are called on the server and not the server record.
+# 19-Apr-2014
+#   Ensure that jerbild init does not complete until the server has completed
+#   discovery. This prevents services from starting when there is apparently
+#   a server but it is not yet ready for them. 
 
 module Jerbil
-  # version set to 1.3.3
-  Version = '1.3.3'
-  # date set to 03-Sep-2013
-  Version_Date = '03-Sep-2013'
-  #ident string set to: jerbil-1.3.3 03-Sep-2013
-  Ident = 'jerbil-1.3.3 03-Sep-2013'
+  # version set to 1.4.0
+  Version = '1.4.0'
+  # date set to 19-Apr-2014
+  Version_Date = '19-Apr-2014'
+  #ident string set to: jerbil-1.4.0 19-Apr-2014
+  Ident = 'jerbil-1.4.0 19-Apr-2014'
 end
