@@ -127,48 +127,58 @@ dopts = {:backtrace=>true,
   :dir=>config[:pid_dir]
 }
   
-logger = nil
 
-begin
-  if daemonize then
-    puts "Daemonizing now" if verbose
-    Daemons.daemonize(dopts)
-    log_opts = Jellog::Config.intersection(config)
-    #log_opts[:log_level] = :debug
-    logger = Jellog::Logger.new('jerbil_sd', log_opts)
-    #config = config.merge(log_opts) # add them back!
-  else
-    puts "Running in the foreground" if verbose
-    logger = $stderr
-  end
-  
-rescue => err
-  
-  File.open('/tmp/jerbil_panic.log', 'w') do |pfile|
-    pfile.puts "Panic during daemonization:"
-    pfile.puts "#{err.class.to_s}: #{err.message}"
-    err.backtrace.each do |bt|
-      pfile.puts(bt)
-    end
-  end
-  
-  exit 1
-end
-
-
+logger = $stderr
 
 logger.puts "Logging started for Jerbil Daemon"
 logger.puts "Daemonized" if verbose && daemonize
 
-my_self = Jerbil::Servers.create_local_server(config[:environment], pkey)
+begin
+  my_self = Jerbil::Servers.create_local_server(config[:environment], pkey)
+  
+  logger.puts "Created local server: #{my_self.ident}"
+  
+  jerbild = Jerbil::Broker.new(config, pkey)
+  
+  logger.puts "Started Broker"
+rescue => err
+  logger.puts "Error while creating server"
+  logger.puts "#{err.class.to_s}: #{err.message}"
+  err.backtrace.each do |bt|
+    logger.puts(bt)
+  end
+  exit 1
+end
 
-logger.puts "Created local server: #{my_self.ident}"
 
-jerbild = Jerbil::Broker.new(config, pkey)
+if daemonize then
+  begin
+    logger.puts "Daemonizing now" if verbose
+    Daemons.daemonize(dopts)
+    jerbild.restart_logger
+    log_opts = Jellog::Config.intersection(config)
+    logger = Jellog::Logger.new('jerbil_sd', log_opts)
+    logger.puts "Daemonised and logging restarted"
+  rescue => err
+    logger.puts "Error while daemonizing server"
+    logger.puts "#{err.class.to_s}: #{err.message}"
+    err.backtrace.each do |bt|
+      logger.puts(bt)
+    end
+    exit 1
+  end
+end
 
-logger.puts "Started Broker"
-
-DRb.start_service(my_self.drb_address, jerbild)
+begin
+  DRb.start_service(my_self.drb_address, jerbild)
+rescue => err
+  logger.puts "Error while connecting to DRb"
+  logger.puts "#{err.class.to_s}: #{err.message}"
+  err.backtrace.each do |bt|
+    logger.puts(bt)
+  end
+  exit 1
+end
 
 logger.puts "Started DRb"
 
